--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 	main-window-geometry = 0x0+0+0
 
 [user]
-	name = <name>
+	name = Franco Risma
 	email = <email>
 
 [alias]
@@ -12,6 +12,14 @@
 	#ci = commit -a
 	ci = commit
 	st = status
+	rank = shortlog -sn --no-merges
+	ds = diff --stat
+	dw = diff --word-diff
+
+	# Complex aliases
+	plog = log --graph --pretty='format:%C(red)%d%C(reset) %C(yellow)%h%C(reset) %ar %C(green)%aN%C(reset) %s'
+    tlog = log --stat --since='1 Day Ago' --graph --pretty=oneline --abbrev-commit --date=relative
+    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
 [mirror]
 	summary = true
